<?xml version="1.0"?>
<package format="3">
  <name>semantic_octomap_interfaces</name>
  <version>1.0.0</version>
  <description>ROS2 message and service definitions for SSMI semantic octomap (Jazzy)</description>
  <maintainer email="fayalasarria@gmail.com">NBV-PPO</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>geometry_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
