<?xml version="1.0"?>
<package format="3">
  <name>semantic_octomap_ros2</name>
  <version>1.0.0</version>
  <description>ROS2 Jazzy port of SSMI semantic octomap with Bayesian multi-class fusion and GetRLE service</description>
  <maintainer email="fayalasarria@gmail.com">NBV-PPO</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>octomap_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>pcl_conversions</depend>
  <depend>semantic_octomap_interfaces</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
